--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
                         <artifactId>tomcat7-maven-plugin</artifactId>  
                         <version>2.2</version>  
                         <configuration>
-                            <url>http://104.248.29.81:80/manager/text</url>  
+                            <url>https://dueinator.dk/manager</url>  
                             <server>TomcatServer</server>
                             <path>/calculator</path>
                             <username>admin</username>
